--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ OfferingSolutions.UoWCore.SampleApp/obj/
 /OfferingSolutions.GenericEFCore.SampleApp/obj
 /OfferingSolutions.GenericEFCore/bin
 /OfferingSolutions.GenericEFCore/obj
+.vscode/launch.json
+.vscode/tasks.json
