Adding first shot of Tests

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ OfferingSolutions.UoWCore.SampleApp/obj/
 /OfferingSolutions.GenericEFCore/obj
 .vscode/launch.json
 .vscode/tasks.json
+/OfferingSolutions.GenericEFCore.Tests/bin
+/OfferingSolutions.GenericEFCore.Tests/obj
