--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,11 +18,9 @@ steps:
     version: '3.0.100' # replace this value with the version that you need for your project
 - task: DotNetCoreCLI@2
   inputs:
-    command: restore
-    projects: '**/*.csproj'
-    feedsToUse: config
-    nugetConfigPath: NuGet.config    # Relative to root of the repository
-    externalFeedCredentials: <Name of the NuGet service connection>
+    command: 'restore'
+    feedsToUse: 'select'
+    vstsFeed: '3f1a8a64-d40c-4a93-be38-2a07bc7e5e44'
 - task: DotNetCoreCLI@2
   displayName: Build
   inputs:
