--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,7 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- task: DotNetCoreInstaller@1
 - task: DotNetCoreInstaller@0
   inputs:
     version: '3.0.100' # replace this value with the version that you need for your project
