--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,7 @@ steps:
   inputs:
     version: '3.0.100' # replace this value with the version that you need for your project
 - task: DotNetCoreCLI@2
+  displayName: Restore
   inputs:
     command: 'restore'
     feedsToUse: 'select'
@@ -28,7 +29,8 @@ steps:
     projects: '**/*.csproj'
     arguments: '--configuration Release' # Update this to match your need
 - task: DotNetCoreCLI@2
+  displayName: Test
   inputs:
     command: test
     projects: '**/*Tests/*.csproj'
-    arguments: '--configuration $(buildConfiguration)'
+    arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
