--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,5 +50,5 @@ steps:
   inputs:
     command: 'push'
     packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
-    nuGetFeedType: 'internal'
-    publishVstsFeed: '3f1a8a64-d40c-4a93-be38-2a07bc7e5e44'
+    nuGetFeedType: 'external'
+    publishFeedCredentials: 'ExternalNugetServer'
