--- a/azure-builds/build.yml
+++ b/azure-builds/build.yml
@@ -12,36 +12,40 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
-
+  Version.MajorMinor: 1.0
+  Version.Revision: $[counter(variables['Version.MajorMinor'], 0)]
+  
 steps:
-  - task: DotNetCoreInstaller@1
-    inputs:
-      version: '3.0.100' # replace this value with the version that you need for your project
-  - task: DotNetCoreCLI@2
-    displayName: Restore
-    inputs:
-      command: 'restore'
-      feedsToUse: 'select'
-      vstsFeed: '3f1a8a64-d40c-4a93-be38-2a07bc7e5e44'
-  - task: DotNetCoreCLI@2
-    displayName: Build
-    inputs:
-      command: build
-      projects: '**/*.csproj'
-      arguments: '--configuration  $(buildConfiguration)'
-  - task: DotNetCoreCLI@2
-    displayName: Test
-    inputs:
-      command: test
-      projects: '**/*Tests/*.csproj'
-      arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: 'pack'
-      packagesToPack: '**/OfferingSolutions.GenericEFCore/*.csproj'
-      versioningScheme: 'byBuildNumber'
-
+- task: DotNetCoreInstaller@1
+  inputs:
+    version: '3.0.100' # replace this value with the version that you need for your project
+- task: DotNetCoreCLI@2
+  displayName: Restore
+  inputs:
+    command: 'restore'
+    feedsToUse: 'select'
+    vstsFeed: '3f1a8a64-d40c-4a93-be38-2a07bc7e5e44'
+- task: DotNetCoreCLI@2
+  displayName: Build
+  inputs:
+    command: build
+    projects: '**/*.csproj'
+    arguments: '--configuration  $(buildConfiguration)'
+- task: DotNetCoreCLI@2
+  displayName: Test
+  inputs:
+    command: test
+    projects: '**/*Tests/*.csproj'
+    arguments: '--configuration $(buildConfiguration) --collect "Code coverage"'
+- task: DotNetCoreCLI@2
+  displayName: Pack
+  inputs:
+    command: 'pack'
+    packagesToPack: '**/OfferingSolutions.GenericEFCore/*.csproj'
+    versioningScheme: 'byEnvVar'
+    versionEnvVar: 'Version.Revision'
 - task: NuGetCommand@2
+  displayName: Push/Publish
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/release'))
   inputs:
     command: 'push'
