--- a/azure-builds/build.yml
+++ b/azure-builds/build.yml
@@ -10,6 +10,8 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
+name: $(Build.DefinitionName)-$(date:yyyyMMdd)$(rev:.r)
+
 variables:
   buildConfiguration: 'Release'
   Version.MajorMinor: 1.0
@@ -46,9 +48,8 @@ steps:
   inputs:
     command: 'pack'
     packagesToPack: '**/OfferingSolutions.GenericEFCore/*.csproj'
-    versioningScheme: 'byEnvVar'
-    versionEnvVar: 'Version.Revision'
-    
+    versioningScheme: 'byBuildNumber'
+
 - task: NuGetCommand@2
   displayName: Push/Publish
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/release'))
