--- a/azure-builds/build.yml
+++ b/azure-builds/build.yml
@@ -50,8 +50,15 @@ steps:
     packagesToPack: '**/OfferingSolutions.GenericEFCore/*.csproj'
     versioningScheme: 'byBuildNumber'
 
+- task: PublishBuildArtifacts@1
+  displayName: Publish Build Artifact
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
+
 - task: NuGetCommand@2
-  displayName: Push/Publish
+  displayName: Publish
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/release'))
   inputs:
     command: 'push'
