--- a/azure-builds/build.yml
+++ b/azure-builds/build.yml
@@ -21,6 +21,12 @@ steps:
   inputs:
     version: '3.0.100' # replace this value with the version that you need for your project
 
+- script: echo %Action%%BuildVersion%
+  displayName: 'Set build version'
+  env:
+    Action: '##vso[build.updatebuildnumber]'
+    BuildVersion: $(GitVersion.SemVer)
+
 - task: DotNetCoreCLI@2
   displayName: Restore
   inputs:
